# TwinsmoothSearcher

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  config.conf  file_manager.cpp  file_manager.h  list.cpp  list.h  logger.cpp  logger.h  main.cpp  nb  nb.cpp  nb.h  prime_calculator.cpp  prime_calculator.h  prime_calculator_top_n.cpp  prime_calculator_top_n.h  static_twinsmooth.cpp  static_twinsmooth.h  tree.cpp  tree.h  treelist.cpp  treelist.h  twinsmooth.cpp  twinsmooth.h  twinsmooth_full.cpp  twinsmooth_full.h  twinsmooth_growing_k.cpp  twinsmooth_growing_k.h  twinsmooth_k.cpp  twinsmooth_k.h  twinsmooth_k_growing.cpp  twinsmooth_k_growing.h  twinsmooth_kopt.cpp  twinsmooth_kopt.h  twinsmooth_range.cpp  twinsmooth_range.h  (+5 more)
Tests/: test.cpp  test.h
btree_version/: CMakeLists.txt
btree_version/include/: benchmark.hpp  k_searcher.hpp  range_searcher.hpp  searcher.hpp  stat_utilities.hpp  variable_range_searcher.hpp
btree_version/include/tlx/container/: btree.hpp
btree_version/src/: main.cpp
include/: avl_tree.hpp  benchmark.h  benchmark.hpp  bigfloat.h  bigint.h  bigint_tree.h  file_manager.h  global_definitions.hpp  iterative_k_searcher.hpp  list.h  logger.h  logger.hpp  node_iterator.hpp  range_searcher.hpp  searcher.hpp  splitfile.hpp  stat_utilities.hpp  utilities.h  utilities.hpp  variable_range_searcher.hpp
include/twins/: base_searcher.hpp  searcher_menu.hpp  searchers.hpp
include/twinsmooth/: all_searchers.h  chunkers.h  generators.h  growing_k_searcher.h  iterators.h  k_searcher.h  range_searcher.h  searcher.h  standard_searcher.h
results/outputs_300/: stats_300.txt
src/: avl_tree.cpp  benchmark.cpp  bigfloat.cpp  bigint.cpp  bigint_tree.cpp  file_manager.cpp  global_definitions.cpp  global_k_searcher.cpp  logger.cpp  main.cpp  range_searcher.cpp  searcher.cpp  splitfile.cpp  utilities.cpp  variable_range_searcher.cpp
src/twins/: base_searcher.cpp  k_searcher.cpp  kgw_searcher.cpp  kvl_searcher.cpp  range_searcher.cpp  rng_searcher.cpp  searcher_menu.cpp  standard_searcher.cpp
src/twinsmooth/: all_searchers.cpp  chunkers.cpp  generators.cpp  growing_k_searcher.cpp  iterators.cpp  k_searcher.cpp  range_searcher.cpp  searcher.cpp  standard_searcher.cpp
